<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInFragment">


    <ScrollView
        android:id="@+id/signInView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signInName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonSpacingLarge"
                android:gravity="center"
                android:text="@string/sign_in_name"
                android:textSize="@dimen/editTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintStart_toStartOf="@+id/login" />

            <EditText
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonSpacingLarge"
                android:ems="10"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInName"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonSpacingLarge"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/commonSpacingMedium"
                android:padding="@dimen/commonSpacingLarge"
                android:text="@string/sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>